flightsBy, terminado
